refactor: rename main file to index.html

--- a/html/history.html
+++ b/html/history.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="history.html">Origine</a></li>
                 <li><a href="training.html">Entraînement</a></li>
                 <li><a href="benefit.html">Bienfaits</a></li>
@@ -117,7 +117,7 @@
         <h2>CrossFit</h2>
         <nav aria-label="Pied de page">
             <ul>
-                <li><a href="home.html">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="history.html">Origine</a></li>
                 <li><a href="training.html">Entraînement</a></li>
                 <li><a href="benefit.html">Bienfaits</a></li>
