feat: add styling to website

--- a/html/training.html
+++ b/html/training.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Apprends le déroulement d'une séance d'entraînement au CrossFit et les différents aspect de la discipline.">
     <meta name="keywords" content="CrossFit, entraînement, séance, WOD, échauffement, gymnastique, haltérophilie, endurance, cardio">
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Indie+Flower&display=swap">
+    <link rel="stylesheet" media="screen" href="../css/screen.css">
+    <link rel="stylesheet" media="print" href="../css/print.css">
+    <script src="../js/main.js" defer></script>
     <title>Les entraînements aux CrossFit</title>
 </head>
 <body>
 
     <header>
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="history.html">Origine</a></li>
@@ -21,21 +26,23 @@
     </header>
 
     <main>
-        <section>
-            <header>
-                <h1>Comment se passe les trainings ?</h1>
-            </header>
-            <p>Apprends comment se déroule une séance d’entraînement et quels sont leur contenu ?</p>
-            <a href="#training-session" role="button">C’est parti !</a>
+        <section class="hero-section hero-training">
+            <div class="hero-content">
+                <header>
+                    <h1>Comment se passe les trainings ?</h1>
+                </header>
+                <p>Apprends comment se déroule une séance d’entraînement et quels sont leur contenu ?</p>
+                <a href="#training-session" role="button">C’est parti !</a>
+            </div>
         </section>
 
-        <section id="training-session">
-            <!--Div nécessaire par la suite pour le style-->
-            <div>
+        <section id="training-session" class="shared-section">
+            <!--Div nécessaire pour le style-->
+            <div class="shared-section-content">
                 <header>
-                    <h2>Déroulé d’un entraînement</h2>
+                    <h2>Déroulé d’un training</h2>
                 </header>
-                <div>
+                <div class="shared-section-text">
                     <p>
                         Une séance de CrossFit se déroule généralement en une heure divisée en 3 parties.
                         Tout d’abord, l’échauffement permettant de préparer muscles, articulations mais aussi d’augmenter le rythme cardiaque.
@@ -52,107 +59,113 @@
                 <a href="#training-gym" role="button">En savoir plus</a>
             </div>
 
-            <figure>
-                <img src="../img/training1.jpg" alt="Entraînement de CrossFit">
+            <figure class="shared-section-gallery">
+                <img src="../img/training1.jpg" alt="Entraînement de CrossFit" class="print-only">
             </figure>
         </section>
 
-        <section id="training-gym">
-            <!--Div nécessaire par la suite pour le style-->
-            <div>
+        <section id="training-gym" class="shared-section shared-section-reverse">
+            <!--Div nécessaire pour le style-->
+            <div class="shared-section-content">
                 <header>
                     <h2>Gymnastique</h2>
                 </header>
-                <p>
-                    La gymnastique est l’un des trois piliers du CrossFit. Pour faire simple, ce sont des exercices basés sur le poids du corps.
-                    Donc pour ces exercices, on ne fait pas intervenir de charges externes. On peut avoir : des pompes, des tractions, des anneaux...
-                    Ces exercices permettent d’avoir une meilleure appréhension de son corps et de pouvoir travailler son agilité, son équilibre
-                    mais aussi sa coordination. Il peut y avoir des WODs axés uniquement sur de la gymnastique.
-                </p>
-                <aside>
-                    <div>
-                        <h3>70%</h3>
-                        <p>Pourcentage de WOD intégrant des mouvements au poids du corps</p>
+                <div class="shared-section-text">
+                    <p>
+                        La gymnastique est l’un des trois piliers du CrossFit. Pour faire simple, ce sont des exercices basés sur le poids du corps.
+                        Donc pour ces exercices, on ne fait pas intervenir de charges externes. On peut avoir : des pompes, des tractions, des anneaux...
+                        Ces exercices permettent d’avoir une meilleure appréhension de son corps et de pouvoir travailler son agilité, son équilibre
+                        mais aussi sa coordination. Il peut y avoir des WODs axés uniquement sur de la gymnastique.
+                    </p>
+                </div>
+                <aside class="shared-stats-three">
+                    <div class="stat-item stat-item-one">
+                        <h3 class="stat-value">70%</h3>
+                        <p class="stat-label">Pourcentage de WOD intégrant des mouvements au poids du corps</p>
                     </div>
-                    <div>
-                        <h3>50</h3>
-                        <p>Nombre d’exercices de gymnastique différents</p>
+                    <div class="stat-item stat-item-two">
+                        <h3 class="stat-value">50</h3>
+                        <p class="stat-label">Nombre d’exercices de gymnastique différents</p>
                     </div>
-                    <div>
-                        <h3>6 semaines</h3>
-                        <p>Durée moyenne pour réaliser sa première traction.</p>
+                    <div class="stat-item stat-item-three">
+                        <h3 class="stat-value">6 semaines</h3>
+                        <p class="stat-label">Durée moyenne pour réaliser sa première traction.</p>
                     </div>
                 </aside>
             </div>
 
-            <figure>
-                <img src="../img/training2.jpg" alt="Barre gymnastique CrossFit dans une salle">
+            <figure class="shared-section-gallery">
+                <img src="../img/training2.jpg" alt="Barre gymnastique CrossFit dans une salle" class="print-only">
             </figure>
         </section>
 
-        <section>
-            <!--Div nécessaire par la suite pour le style-->
-            <div>
+        <section class="shared-section">
+            <!--Div nécessaire pour le style-->
+            <div class="shared-section-content">
                 <header>
                     <h2>L’Haltérophilie</h2>
                 </header>
-                <p>
-                    L’haltérophilie est le deuxième pilier de la discipline CrossFit. Elle peut paraître compliquée voire impossible au premier abord,
-                    mais elle est largement accessible. Avec un peu de pratique, on se rend compte que c’est surtout une question de technique.
-                    Les deux mouvements à maîtriser sont l’arraché (<em>snatch</em>) et l’épaulé jeté (<em>clean and jerk</em>), que l’on peut également
-                    retrouver aux Jeux Olympiques. Travailler ces mouvements va permettre d’améliorer ta force, ta puissance et ton explosivité.
-                </p>
-                <aside>
-                    <div>
-                        <h3>65%</h3>
-                        <p>Pourcentage de WOD intégrant des mouvements d’haltérophilie</p>
+                <div class="shared-section-text">
+                    <p>
+                        L’haltérophilie est le deuxième pilier de la discipline CrossFit. Elle peut paraître compliquée voire impossible au premier abord,
+                        mais elle est largement accessible. Avec un peu de pratique, on se rend compte que c’est surtout une question de technique.
+                        Les deux mouvements à maîtriser sont l’arraché (<em>snatch</em>) et l’épaulé jeté (<em>clean and jerk</em>), que l’on peut également
+                        retrouver aux Jeux Olympiques. Travailler ces mouvements va permettre d’améliorer ta force, ta puissance et ton explosivité.
+                    </p>
+                </div>
+                <aside class="shared-section-stat">
+                    <div class="stat-item">
+                        <h3 class="stat-value">65%</h3>
+                        <p class="stat-label">Pourcentage de WOD intégrant des mouvements d’haltérophilie</p>
                     </div>
-                    <div>
-                        <h3>223 kg</h3>
-                        <p>Record du monde au snatch</p>
+                    <div class="stat-item">
+                        <h3 class="stat-value">223 kg</h3>
+                        <p class="stat-label">Record du monde au snatch</p>
                     </div>
                 </aside>
             </div>
 
-            <figure>
-                <img src="../img/training3.jpg" alt="Haltérophilie">
+            <figure class="shared-section-gallery">
+                <img src="../img/training3.jpg" alt="Haltérophilie" class="print-only">
             </figure>
         </section>
 
-        <section>
-            <!--Div nécessaire par la suite pour le style-->
-            <div>
+        <section class="shared-section shared-section-reverse">
+            <!--Div nécessaire pour le style-->
+            <div class="shared-section-content">
                 <header>
                     <h2>Endurance</h2>
                 </header>
-                <p>
-                    Le cardio est l’élément clé pour performer au CrossFit. Améliorer cette capacité te permettra de progresser sur les deux autres
-                    piliers, mais aussi d’améliorer ton temps durant les WODs. Tu vas pouvoir travailler ton cardio à travers une multitude
-                    d’exercices comme les burpees ou la course à pied. Mais aussi grâce à des ergomètres comme le Rameur, le SkiErg ou même
-                    l’Assault Bike. Le cardio, en plus d’améliorer ton endurance globale, va te permettre de brûler des calories et d’avoir
-                    une meilleure composition corporelle.
-                </p>
-                <aside>
-                    <div>
-                        <h3>70 %</h3>
-                        <p>Pourcentage de WOD intégrant des exercices cardiovasculaires</p>
+                <div class="shared-section-text">
+                    <p>
+                        Le cardio est l’élément clé pour performer au CrossFit. Améliorer cette capacité te permettra de progresser sur les deux autres
+                        piliers, mais aussi d’améliorer ton temps durant les WODs. Tu vas pouvoir travailler ton cardio à travers une multitude
+                        d’exercices comme les burpees ou la course à pied. Mais aussi grâce à des ergomètres comme le Rameur, le SkiErg ou même
+                        l’Assault Bike. Le cardio, en plus d’améliorer ton endurance globale, va te permettre de brûler des calories et d’avoir
+                        une meilleure composition corporelle.
+                    </p>
+                </div>
+                <aside class="shared-section-stat">
+                    <div class="stat-item">
+                        <h3 class="stat-value">70 %</h3>
+                        <p class="stat-label">Pourcentage de WOD intégrant des exercices cardiovasculaires</p>
                     </div>
-                    <div>
-                        <h3>VO₂ max</h3>
-                        <p>Augmentation de la capacité aérobie de 10 à 20 % en seulement 8 semaines</p>
+                    <div class="stat-item">
+                        <h3 class="stat-value">VO₂ max</h3>
+                        <p class="stat-label">Augmentation de la capacité aérobie de 10 à 20 % en seulement 8 semaines</p>
                     </div>
                 </aside>
             </div>
 
-            <figure>
-                <img src="../img/training4.jpg" alt="Rameur">
+            <figure class="shared-section-gallery">
+                <img src="../img/training4.jpg" alt="Rameur" class="print-only">
             </figure>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <h2>CrossFit</h2>
-        <nav aria-label="Pied de page">
+        <nav aria-label="Pied de page" class="footer-nav">
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="history.html">Origine</a></li>
@@ -160,10 +173,15 @@
                 <li><a href="benefit.html">Bienfaits</a></li>
             </ul>
         </nav>
-        <!--Div nécessaire par la suite pour le style-->
-        <div>
+
+        <!--Div nécessaire pour le style-->
+        <div class="footer-info">
             <p>&copy; 2025 Florian Ekoué. Tous droits réservés.</p>
-            <div>
+            <div class="footer-contact">
+                <p>Pour toute question, contactez l'administrateur :</p>
+                <a href="mailto:florian.ekoue@etud.u-picardie.fr">florian.ekoue@etud.u-picardie.fr</a>
+            </div>
+            <div class="footer-link">
                 <a href="https://www.instagram.com/crossfit/" aria-label="Instagram">
                     <img src="../img/instagram.svg" alt="Icône instagram">
                 </a>
