--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +9,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Indie+Flower&display=swap">
     <link rel="stylesheet" media="screen" href="../css/screen.css">
     <link rel="stylesheet" media="print" href="../css/print.css">
-    <script src="../js/main.js" defer></script>
     <title>Découvre le CrossFit</title>
 </head>
 <body>
-    <header>
+    <header class="test">
+        <button class="nav-toggle" aria-label="Ouvrir le menu">
+            <div class="hamburger hamburger--large">
+                <span class="hamburger__bar"></span>
+                <span class="hamburger__bar"></span>
+                <span class="hamburger__bar"></span>
+            </div>
+        </button>
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -21,13 +27,17 @@
                 <li><a href="training.html">Entraînement</a></li>
                 <li><a href="benefit.html">Bienfaits</a></li>
             </ul>
+            <label id="theme-toggle">
+                <input type="checkbox" id="theme-toggle-checkbox">
+                <span class="slider"></span>
+            </label>
         </nav>
     </header>
 
     <main>
         <section class="hero-section">
             <!--Div nécessaire pour le style-->
-            <div class="hero-content">
+            <div class="hero-content animate-in">
                 <header>
                     <h1>CrossFit</h1>
                 </header>
@@ -36,7 +46,7 @@
             </div>
         </section>
 
-        <section id="origin-crossfit" class="shared-section home-section">
+        <section id="origin-crossfit" class="shared-section home-section animate-in-delay">
             <!--Div nécessaire pour le style-->
             <div class="shared-section-content home-section-content">
                 <header>
@@ -55,7 +65,7 @@
                 <a href="history.html" role="button">Découvrir</a>
             </div>
 
-            <figure class="shared-gallery-three home-section-gallery ">
+            <figure class="shared-gallery-three home-section-gallery animate-in-delay">
                 <img src="../img/home1.jpg" alt="Salle de CrossFit" class="print-only">
                 <img src="../img/home2.jpg" alt="Salle de CrossFit 2">
                 <img src="../img/home3.jpg" alt="Banc avec haltère">
@@ -73,16 +83,16 @@
             </aside>
         </section>
 
-        <section class="section-info">
+        <section class="section-info animate-in-delay">
             <h2>Le savais-tu ?</h2>
             <p>
-                Chaque année, la marque CrossFit organise une compétition appelée les Open, ouverte à tous et qui te permet de te mesurer aux meilleurs athlètes du monde. 
+                Chaque année, la marque CrossFit organise une compétition appelée les Open, ouverte à tous et qui te permet de te mesurer aux meilleurs athlètes du monde.
                 Cette compétition a pour but de déterminer 'The Fittest on Earth'.
             </p>
             <a href="https://games.crossfit.com/open/overview" role="button">M'informer</a>
         </section>
 
-        <section class="shared-section home-section">
+        <section class="shared-section home-section animate-in-delay">
             <!--Div nécessaire pour le style-->
             <div class="shared-section-content home-section-content">
                 <header>
@@ -102,7 +112,7 @@
                 <a href="training.html" role="button">Découvrir</a>
             </div>
 
-            <figure class="shared-gallery-two home-section-gallery">
+            <figure class="shared-gallery-two home-section-gallery animate-in-delay">
                 <img src="../img/home4.jpg" alt="Entraînement de CrossFit 1" class="print-only">
                 <img src="../img/home5.jpg" alt="Entraînement de CrossFit 2">
             </figure>
@@ -119,7 +129,7 @@
             </aside>
         </section>
 
-        <section class="section-testimonial">
+        <section class="section-testimonial animate-in-delay">
             <header>
                 <h2>Tu es encore mitigé ?</h2>
             </header>
@@ -137,7 +147,7 @@
                     <h3>Témoignage</h3>
                     <blockquote>
                         <p>
-                            J'ai commencé le CrossFit depuis 4 mois, et je ne peux plus m'en passer, les exercices sont variés, l'ambiance est top ! 
+                            J'ai commencé le CrossFit depuis 4 mois, et je ne peux plus m'en passer, les exercices sont variés, l'ambiance est top !
                             Je recommande vivement !
                         </p>
                         <footer>
@@ -156,7 +166,7 @@
             </nav>
         </section>
 
-        <section class="section-faq">
+        <section class="section-faq animate-in">
             <!--Div nécessaire pour le style-->
             <div class="faq-info">
                 <header>
@@ -264,5 +274,7 @@
             </div>
         </div>
     </footer>
+    <script src="../js/main.js" defer></script>
+
 </body>
 </html>
